--- a/package.json
+++ b/package.json
@@ -30,11 +30,25 @@
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
+  },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --fix",
+    "format": "prettier --write \"./src/**/*.+(js|jsx|ts|tsx|json|css|md)\"",
+    "tsc": "tsc"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && tsc --noEmit"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -57,7 +71,12 @@
   "devDependencies": {
     "@sentry/react": "^6.2.1",
     "@sentry/tracing": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.1.3",
     "prettier": "^2.2.1"
   }
 }
