--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-facebook-login": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/yup": "^0.29.11",
     "bootstrap": "^4.6.0",
     "i18next": "^19.9.2",
     "moment": "^2.29.1",
@@ -74,6 +75,8 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
