sidebar, static layout , mobile layout check, colors variables

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-i18next": "^11.8.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.29.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
@@ -38,7 +40,7 @@
     ]
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
