--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
