--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-facebook-login": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/yup": "^0.29.11",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^19.9.2",
     "moment": "^2.29.1",
