--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-facebook-login": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
-    "@types/yup": "^0.29.11",
+    "@types/yup": "^0.28.0",
+    "awesome-phonenumber": "^2.47.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^19.9.2",
@@ -33,7 +34,7 @@
     "styled-icons": "^10.29.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "yup": "^0.28.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
