--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "intercom",
   "version": "0.1.0",
   "private": true,
+  "license": "Apache-2.0",
   "dependencies": {
     "@hookform/resolvers": "^1.3.5",
     "@testing-library/jest-dom": "^5.11.4",
