--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
   }
 }
