--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "prettier": "^2.2.1"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,md}": "prettier --write",
-    "src/**/*.{js,jsx,ts,tsx,json,md}": "eslint --cache --fix",
+    "src/**/*.{js,jsx,ts,tsx,json,md}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
