--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.29.0",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.28.5"
   },
@@ -49,7 +48,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
