--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^6.15.4",
     "react-i18next": "^11.8.9",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.29.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.28.5"
   },
   "devDependencies": {
+    "@sentry/cli": "^1.63.1",
     "@sentry/react": "^6.2.1",
     "@sentry/tracing": "^6.2.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
@@ -60,6 +64,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "yarn run uploadSourceMaps && yarn run removeSourceMaps",
+    "uploadSourceMaps": "sentry-cli releases files $npm_package_version upload-sourcemaps --no-rewrite ./build/static/js/ --url-prefix '~/static/js'",
+    "removeSourceMaps": "rimraf ./build/**/*.map",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --fix",
