--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.3",
+    "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
@@ -63,7 +63,8 @@
     "src/**/*.{js,jsx,ts,tsx,json,md}": [
       "prettier --write",
       "eslint --cache --fix"
-    ]
+    ],
+    "*.js": "eslint --cache --fix"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -75,12 +76,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint src --fix",
     "format": "prettier --write \"./src/**/*.+(js|jsx|ts|tsx|json|css|md)\"",
-    "tsc": "tsc"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && tsc --noEmit"
-    }
+    "tsc": "tsc",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
