--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "yarn run uploadSourceMaps && yarn run removeSourceMaps",
+    "postbuild": "yarn run uploadSourceMaps && node ./delete-sourcemaps.js",
     "uploadSourceMaps": "sentry-cli releases files $npm_package_version upload-sourcemaps --no-rewrite ./build/static/js/ --url-prefix '~/static/js'",
-    "removeSourceMaps": "rimraf ./build/**/*.map",
+    "delete-maps": "yarn run delete-map-files && yarn run delete-references-to-map-files",
+    "delete-map-files": "find ./build -name '*.map' -delete",
+    "delete-references-to-map-files": "find ./build -regex '.*\\.\\(js\\|css\\)' -exec sed -i -E '\\/[\\*\\/]#\\ssourceMappingURL=main(\\.[0-9a-f]+)?\\.(css|js)\\.map(\\*\\/)?/g' {} +",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --fix",
